# Networking

./: .gitignore  CMakeLists.txt  LICENSE  TODO.md  sources.MD
client/: CMakeLists.txt  main.cpp
client/src/: main.cpp
net/: CMakeLists.txt
net/hdr/: core.h  ipv4.h  ipv6.h  msg.h  msgHeader.h  msgOrder.h  msgType.h  package.h  port.h  socket.cpp  socket.h
net/src/: core.cpp  ipv4.cpp  ipv6.cpp  msg.cpp  msgHeader.cpp  msgOrder.cpp  msgType.cpp  package.cpp  port.cpp  socket.UDP.cpp  socket.cpp  socketIO.cpp  socketSG.cpp  socketTCP.cpp
server/: CMakeLists.txt  main.cpp
server/src/: main.cpp
